--- a/Analyzer/test/Makefile
+++ b/Analyzer/test/Makefile
@@ -47,7 +47,7 @@ INCLUDESDIRS    += -I$(TENSORFLOW_DIR)/include
 #OBJS       = $(patsubst %, $(ODIR)/%, $(OBJ))
 
 
-PROGRAMS = MyAnalysis plot_0l plot_1l Stack_plot Stack_plot_2l
+PROGRAMS = MyAnalysis plot_0l plot_1l Stack_plot Stack_plot_1l Stack_plot_2l
 
 
 all: mkobj sampPyWrap $(PROGRAMS) link
@@ -142,6 +142,9 @@ plot_1l: $(ODIR)/plot_1l.o
 	$(LD) $^ $(LIBS) -o $@
 
 Stack_plot_2l: $(ODIR)/Stack_plot_2l.o
+	$(LD) $^ $(LIBS) -o $@
+
+Stack_plot_1l: $(ODIR)/Stack_plot_1l.o
 	$(LD) $^ $(LIBS) -o $@
 
 Stack_plot: $(ODIR)/Stack_plot.o
