--- a/Analyzer/test/Makefile.in
+++ b/Analyzer/test/Makefile.in
@@ -52,7 +52,7 @@ INCLUDESDIRS += -I$(TDIR) -I$(IFWDIR) -I$(SFWDIR) -I$(IADIR) -I$(SADIR) -I$(SSDI
 
 PROGRAMS = MyAnalysis plot_1l Stack_plot_0l Stack_plot_1l Stack_plot_2l
 
-ANALYZERS  = $(ODIR)/AnalyzeSignalKM.o $(ODIR)/AnalyzeNonIsoMuonTrigger.o $(ODIR)/MiniTupleMaker.o $(ODIR)/CalculateBTagSF.o $(ODIR)/BTagCalibrationStandalone.o $(ODIR)/MakeMiniTree.o $(ODIR)/AnalyzeLepTrigger.o $(ODIR)/AnalyzeTest.o 
+ANALYZERS  = $(ODIR)/AnalyzeLepTrigger_NIM $(ODIR)/MakeNewQCDSystematic.o $(ODIR)/ExtraChecksv2.o $(ODIR)/ExtraChecks.o $(ODIR)/MakeQCDChecks.o $(ODIR)/MakeANPlots.o $(ODIR)/AnalyzeSignalKM.o $(ODIR)/AnalyzeNonIsoMuonTrigger.o $(ODIR)/MiniTupleMaker.o $(ODIR)/CalculateBTagSF.o $(ODIR)/BTagCalibrationStandalone.o $(ODIR)/MakeMiniTree.o $(ODIR)/AnalyzeLepTrigger.o $(ODIR)/AnalyzeTest.o 
 ANALYZERS += $(ODIR)/AnalyzeWControlRegion.o $(ODIR)/MakeMiniTree.o $(ODIR)/CalculateBTagSF.o $(ODIR)/AnalyzeBTagSF.o $(ODIR)/BTagCalibrationStandalone.o 
 ANALYZERS += $(ODIR)/AnalyzeBackground.o $(ODIR)/AnalyzeTopTagger.o $(ODIR)/AnalyzeEventSelection.o $(ODIR)/AnalyzeEventShape.o $(ODIR)/Analyze0Lep.o $(ODIR)/Analyze1Lep.o 
 ANALYZERS += $(ODIR)/AnalyzeNjetsMinusOneCSFillDijetHists.o $(ODIR)/AnalyzeNjetsMinusOneCSJetReplacement.o $(ODIR)/Semra_Analyzer.o $(ODIR)/TwoLepAnalyzer.o 
